GNOME Bugzilla – Bug 637449
Inconsistent naming in "A program is still running:" dialog
Last modified: 2011-05-26 09:16:59 UTC
If you select the option "Restart" from the menu and some program is still running and not responding, you can choose between three options: "Lock Screen", "Cancel" and "Reboot Anyway". The last option should be "Restart Anyway". This is a trivial issue, but shouldn't be too hard to fix either. I am using natty and didn't know which package name to feed to apport, for reference see the attached screenshot. If any more information is required, I will provide it.
A patch for this has already been submitted to Launchpad and will be forwarded upstream shortly.
Created attachment 176648 [details] [review] Patch that replaces all instances of 'Reboot anyway" with "Restart anyway"
Created attachment 177713 [details] [review] Replaces all occurrences of "Reboot Anyway" with "Restart Anyway"
Created attachment 178082 [details] [review] Replace "Reboot Anyway" with "Restart Anyway" in gsm-inhibit-dialog.c
Comment on attachment 178082 [details] [review] Replace "Reboot Anyway" with "Restart Anyway" in gsm-inhibit-dialog.c Please commit; note that we're in UI freeze announcement, so you'll need to send a mail about it. Thanks!
Hi, I was looking through Ubuntu's gnome-session patches to see which have been taken care of upstream and which haven't. I'm going to take a guess (because I don't know how to check for sure) and say that I don't think Chris Wilson has a git account if that's what this patch is waiting on. Thanks!
That's correct.
Thanks, pushed.