gsm: Replace "Reboot Anyway" with "Restart Anyway"

"Restart" is the term we're using everywhere else, not "Reboot".

https://bugzilla.gnome.org/show_bug.cgi?id=637449
LP:#685050